test/files/neg/t7653b.check
B_2.scala:2: error: triggering error expanding `m`
  M.m.apply() // error in qualifier correctly reported
    ^
B_2.scala:3: error: triggering error expanding `m`
  M.m()       // but here it resulted in a NPE
    ^
two errors found
